# pngIO

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  conanfile.py  requirements.txt
.github/workflows/: main.yml
include/: PNGCRC.hpp  PNGChunk.hpp  PNGCrc.hpp  PNGFile.hpp  PNGIOTypes.hpp  PNGImage.hpp  PNGPixel.hpp  pngUtils.hpp
src/: PNGCRC.cpp  PNGChunk.cpp  PNGCrc.cpp  PNGFile.cpp  PNGIOTypes.cpp  PNGImage.cpp  main.cpp
test/: CHANGELOG.md  CMakeLists.txt  HelloWorldTest.cpp  PNGChunkTest.cpp  PNGChunkTest.hpp  PNGIOTypesTests.cpp  PNGIOTypesTests.hpp  PNGPixelTests.cpp  PNGPixelTests.hpp  PNGTests.cpp  PNGTests.hpp
test/input/: badCRC.txt
